--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,4 @@
-/* .bg-color-header {
-    background-color: aquamarine;
-} */
-h1 {
-    background-color: aquamarine;
+.bg-color-header{
+    background: url(../images/bg-image.jpg) center center/cover;
 }
 
-/* ul {
-    background-image: url(../images/bg-image.jpg);
-} */
