adjust: sizes of links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,19 +2,30 @@
 
 .menu-color-definition {
     background-color: red;
+    font-family: "Dosis", sans-serif;
+    font-weight: 700;
 }
 
 .menu-color-legislation {
     background-color: orangered;
+    font-family: "Dosis", sans-serif;
+    font-weight: 700;
 }
+
 
 .menu-color-support {
     background-color: green;
+    font-family: "Dosis", sans-serif;
+    font-weight: 700;
 }
+
 
 .menu-color-contact {
     background-color: blue;
+    font-family: "Dosis", sans-serif;
+    font-weight: 700;
 }
+
 
 .support-employers {
     background-color: indigo;
@@ -36,6 +47,18 @@ div a {
     color: black;
 }
 
+
+/*-------------------------------------------------------general*/
+
+.support {
+    margin: 20px 0px;
+}
+/* 
+.def-leg {
+    margin-top: 20px;
+} */
+
+
 /*------------------------------------------------------Images*/
 
 .bg-image-header{
@@ -47,6 +70,11 @@ div a {
     background-color: #fafafa;
 }
 
+/* .protected-image {
+    background: url(../images/protected-image.jpg) center center/cover;
+    min-height: 100%;
+    width: 100%;
+} */
 /*------------------------------------------------------Headings*/
  h1, h2, h3, h4, h5 {
     font-family: "Comfortaa", sans-serif;
@@ -55,7 +83,32 @@ div a {
 h1, h2 {
     color: #1ebbd7;
     background-color: grey;
+    margin-bottom: 0px;
 }
+
+h3 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+/*------------------------------------------links*/
+
+a i {
+    font-size: 25px;
+    padding-right: 10px;
+    text-align: center;
+}
+
+
+
+a span {
+    font-size: 25px;
+    text-align: center;
+    margin: 5px;
+    padding-left: 30px;
+}
+
+
 
 /*----------------------------------------- media queries*/
 
