change: positions of jumbotron and navbar - may need to change back

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,9 @@ li a {
     font-family: "Dosis", sans-serif;
 }
 
-
-
+.navbar {
+    position: fixed;
+}
 /*------------------------------------------------------Images*/
 
 .bg-image-header{
@@ -74,6 +75,7 @@ li a {
 
 .jumbotron {
     background: url(../images/bg-image.jpg) center center/cover;
+   
 }
 
 .prot-char {
